# ZomatoAnalytics

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: eda.ipynb
src/: clean.py  load.py
zomato_dbt/: .user.yml  dbt_project.yml
zomato_dbt/models/marts/: dim_cuisine.sql  dim_location.sql  dim_restaurant_type.sql  fct_restaurants.sql  schema.yml
zomato_dbt/models/staging/: schema.yml  sources.yml  stg_zomato.sql
